--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Jamón Serrano'
-VOTE2VALUE = 'Paella'
+VOTE1VALUE = 'España'
+VOTE2VALUE = 'Francia'
 SHOWHOST = 'false'
